# NativeSpaceElves

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.bat
include/glad/: glad.h
src/: Map.cpp  Map.h  Map.hpp  Player.cpp  Player.h  Player.hpp  SpriteRenderer.cpp  SpriteRenderer.h  SpriteRenderer.hpp  glad.c  main.cpp
src/Actors/: Player.cpp  Player.hpp
src/Renderers/: Renderer.cpp  Renderer.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  UIRenderer.cpp  UIRenderer.hpp
